# oa_cohort

./: .gitignore  404.html  CHANGELOG.md  README.md  TODO  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: pypi.yml
cohort_configurations/: REPORT.csv  REPORT_VERSION.csv  measure_definitions_lung.xlsx
dash_config/: VOCABULARY.csv  dash_cohort.csv  dash_cohort_def.csv  dash_cohort_def_map.csv  indicator.csv  measure.csv  measure_relationship.csv  obs_subquery.csv  phenotype.csv  phenotype_definition.csv  query_rule.csv  query_rule_map.csv  report.csv  report_cohort_map.csv  report_indicator_map.csv  report_version.csv  subquery.csv
docs/: example_execution.md  index.md  measurables.md  measure_resolution.md  query_rule_definitions.md
example_execution/: index.html
measurables/: index.html
measure_resolution/: index.html
notebooks/: 00_setup.ipynb  01_query_plan.ipynb  02_render.ipynb  03_prioritise.ipynb  99_reload.ipynb
oa_cohorts/: __init__.py  cohorts.py  materialised_report.py  reports.py
query_rule_definitions/: index.html
search/: search_index.json
src/oa_cohorts/: __init__.py  cohorts.py  materialised_report.py
src/oa_cohorts/authoring/: __init__.py  loaders.py  models.py  mutations.py  preview.py  (+3 more)
tests/: __init__.py  conftest.py  test_cli_runtime.py
tests/authoring/: test_mutations.py  test_preview.py  test_rule_status.py  test_service.py  test_validation.py
tests/dash_cohorts/: test_dash_cohort_failures.py
tests/indicators/: test_indicator_failures.py
tests/measures/: test_measure_failures.py  test_temporal_window.py
tests/output/: test_report_runner_reconciliation.py
tests/query_rules/: test_query_rule_failures.py
tests/ux/: test_config_import.py
(+39 files in other folders)
