[project]
name = "oa-cohorts"
version = "0.1.0"
description = "Serialisation utilities for OMOP CDM cohorts and CQI builder"
readme = "README.md"
authors = [
    { name = "Georgie Kennedy", email = "georgina.kennedy@unsw.edu.au" }
]
requires-python = ">=3.12"
dependencies = [
    "omop-constructs>=0.3.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"


[tool.uv_build]
package-data = { "oa_cohorts" = ["**/*.css"] }