[project]
name = "oa-cohorts"
version = "0.2.4"
description = "Serialisation utilities for OMOP CDM cohorts and CQI builder"
readme = "README.md"
authors = [
    { name = "Georgie Kennedy", email = "georgina.kennedy@unsw.edu.au" }
]
requires-python = ">=3.12"
dependencies = [
    "omop-constructs>=0.3.7",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv_build]
package-data = { "oa_cohorts" = ["**/*.css"] }

[project.optional-dependencies]
dev = [
  "ipython>=8.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.8",
  "ruff>=0.4",
  "rich>=13.0",
  "mkdocs-material>=9.7.1",
  "mkdocstrings-python>=2.0.1",
  "mkdocs>=1.6.1",
  "mkdocs-mermaid2-plugin"
]

docs = [
  "sphinx",
  "myst-parser",
]
